check token validity and access role
